@@ -36,21 +36,21 @@
 	</array>
 	<key>IBOpenObjects</key>
 	<array>
+		<integer>495</integer>
+		<integer>279</integer>
+		<integer>829</integer>
+		<integer>583</integer>
+		<integer>817</integer>
 		<integer>741</integer>
 		<integer>872</integer>
-		<integer>495</integer>
-		<integer>928</integer>
 		<integer>327</integer>
-		<integer>857</integer>
+		<integer>928</integer>
 		<integer>21</integer>
+		<integer>29</integer>
+		<integer>857</integer>
 		<integer>851</integer>
-		<integer>829</integer>
 		<integer>306</integer>
 		<integer>416</integer>
-		<integer>583</integer>
-		<integer>279</integer>
-		<integer>817</integer>
-		<integer>29</integer>
 	</array>
 	<key>IBSystem Version</key>
 	<string>8B15</string>
