@@ -1,3 +1,12 @@
+2005-07-04  Laurent Sansonetti  <lrz@gnome.org>
+
+	* lib/alexandria/macui/MainController.rb,
+	  lib/alexandria/macui/Matrix.rb,
+	  lib/alexandria/macui/MainWindow.nib/info.nib,
+	  lib/alexandria/macui/MainWindow.nib/keyedobjects.nib:
+
+	Finally fixed the matrix to accept to be the key view of the window.
+
 2005-07-03  Laurent Sansonetti  <lrz@gnome.org>
 
 	* lib/alexandria/export_library.rb:
